[gd_scene load_steps=9 format=3 uid="uid://cs506b8kfpcox"]

[ext_resource type="Texture2D" uid="uid://doksiiwcl2t3b" path="res://sprites/interactables_objs.png" id="1_nglia"]
[ext_resource type="Script" path="res://scripts/destructable_object.gd" id="1_pv3f2"]
[ext_resource type="PackedScene" uid="uid://b7t3kkfemxwnh" path="res://scenes/assets/health.tscn" id="2_kln2l"]
[ext_resource type="Texture2D" uid="uid://decrmkmjcdw50" path="res://sprites/fx_sheet.png" id="2_xeuee"]
[ext_resource type="Script" path="res://scripts/destructable_object_animation.gd" id="3_0n40n"]

[sub_resource type="Animation" id="Animation_qmni2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FXSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FXSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fboan"]
resource_name = "explosion"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FXSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FXSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wyrr"]
_data = {
"RESET": SubResource("Animation_qmni2"),
"destruction": SubResource("Animation_fboan")
}

[node name="ShootTarget" type="Node2D"]
script = ExtResource("1_pv3f2")

[node name="FXSprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
texture_filter = 1
texture = ExtResource("2_xeuee")
hframes = 7
frame = 1

[node name="ObjectSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_nglia")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"destructable_object_animations": SubResource("AnimationLibrary_4wyrr")
}
script = ExtResource("3_0n40n")

[node name="Health" parent="." instance=ExtResource("2_kln2l")]

[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
[connection signal="finished_destroy_animation" from="AnimationPlayer" to="." method="_on_animation_player_finished_destroy_animation"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="health_depleted" from="Health" to="AnimationPlayer" method="_on_health_health_depleted"]

[editable path="Health"]
